--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,28 +61,28 @@ jobs:
           stage-name: staging
           debug: ${{ secrets.ACTIONS_STEP_DEBUG }} 
 
-  promote-to-prod:
-    runs-on: ubuntu-latest
-    #needs: [ promote-to-staging ]
-    # only run for tags
-    if: contains(github.ref, 'refs/tags/')
-    environment: production
-    steps:
-      - uses: actions/checkout@v3
-      - id: api-info
-        # get the api name and version from the swagger spec
-        # we need to set these as variables to use them as input in the next step
-        run: |
-          API_NAME=$(jq '.info.title' swagger.json | tr -d '"')
-          API_VERSION=$(jq '.info.version' swagger.json | tr -d '"')
-          echo "::set-output name=api-name::${API_NAME}"
-          echo "::set-output name=api-version::${API_VERSION}"
-      - uses: jiridj/wm-apigw-actions-promote-api@v1
-        with: 
-          apigw-url: ${{ secrets.APIGW_URL }}
-          apigw-username: ${{ secrets.APIGW_USERNAME }}
-          apigw-password: ${{ secrets.APIGW_PASSWORD }}
-          api-name: ${{ steps.api-info.outputs.api-name }}
-          api-version: ${{ steps.api-info.outputs.api-version }}
-          stage-name: production
-          debug: ${{ secrets.ACTIONS_STEP_DEBUG }}
+  # promote-to-prod:
+  #   runs-on: ubuntu-latest
+  #   #needs: [ promote-to-staging ]
+  #   # only run for tags
+  #   if: contains(github.ref, 'refs/tags/')
+  #   environment: production
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - id: api-info
+  #       # get the api name and version from the swagger spec
+  #       # we need to set these as variables to use them as input in the next step
+  #       run: |
+  #         API_NAME=$(jq '.info.title' swagger.json | tr -d '"')
+  #         API_VERSION=$(jq '.info.version' swagger.json | tr -d '"')
+  #         echo "::set-output name=api-name::${API_NAME}"
+  #         echo "::set-output name=api-version::${API_VERSION}"
+  #     - uses: jiridj/wm-apigw-actions-promote-api@v1
+  #       with: 
+  #         apigw-url: ${{ secrets.APIGW_URL }}
+  #         apigw-username: ${{ secrets.APIGW_USERNAME }}
+  #         apigw-password: ${{ secrets.APIGW_PASSWORD }}
+  #         api-name: ${{ steps.api-info.outputs.api-name }}
+  #         api-version: ${{ steps.api-info.outputs.api-version }}
+  #         stage-name: production
+  #         debug: ${{ secrets.ACTIONS_STEP_DEBUG }}
