--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,8 +56,8 @@ jobs:
           apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
           apigw-password: ${{ secrets.APIGW_PASSWORD }}
-          api-name: ${{ steps.api-info.outputs.api-name }}
-          api-version: ${{ steps.api-info.outputs.api-version }}
+          api-name: ${{ steps.api-info.api-name }}
+          api-version: ${{ steps.api-info.api-version }}
           stage-name: staging
           debug: ${{ secrets.ACTIONS_STEP_DEBUG }} 
 
