--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,9 +49,9 @@ jobs:
         run: |
           API_NAME=$(jq '.info.title' swagger.json | tr -d '"')
           API_VERSION=$(jq '.info.version' swagger.json | tr -d '"')
-          echo "::set-output name=api-name::${API_NAME}"
-          echo "::set-output name=api-version::${API_VERSION}"
-      - uses: jiridj/wm-apigw-actions-promote-api@v1
+          echo "{api-name}={API_NAME}" >> $GITHUB_OUTPUT
+          echo "{api-version}={API_VERSION}" >> $GITHUB_OUTPUT
+      - uses: jiridj/wm-apigw-actions-promote-api@v1 
         with: 
           apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
