--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: jiridj/wm-apigw-actions-register-api@v1
         with: 
-          apigw-url: ${{ secrets.APIGW_URL_DEV }}
+          apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
           apigw-password: ${{ secrets.APIGW_PASSWORD }}
           api-spec: swagger.json
@@ -56,10 +56,10 @@ jobs:
           apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
           apigw-password: ${{ secrets.APIGW_PASSWORD }}
-          api-name: ${{ steps.api-info.outputs.api-name }}
-          api-version: ${{ steps.api-info.outputs.api-version }}
+          api-name: Swagger Petstore
+          api-version: 1.0.25
           stage-name: staging
-          debug: ${{ secrets.ACTIONS_STEP_DEBUG }} 
+        #  debug: ${{ secrets.ACTIONS_STEP_DEBUG }} 
 
   # promote-to-prod:
   #   runs-on: ubuntu-latest
