--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,16 +42,16 @@ jobs:
     if: contains(github.ref, 'refs/tags/')
     environment: staging
     steps:
-      - uses: actions/checkout@v3
-      - id: api-info
-        # get the api name and version from the swagger spec
-        # we need to set these as variables to use them as input in the next step
-        run: |
-          API_NAME=$(jq '.info.title' swagger.json | tr -d '"')
-          API_VERSION=$(jq '.info.version' swagger.json | tr -d '"')
-          echo "::set-output name=api-name::${API_NAME}"
-          echo "::set-output name=api-version::${API_VERSION}"
-      - uses: jiridj/wm-apigw-actions-promote-api@v1.2.0
+      # - uses: actions/checkout@v3
+      # - id: api-info
+      #   # get the api name and version from the swagger spec
+      #   # we need to set these as variables to use them as input in the next step
+      #   run: |
+      #     API_NAME=$(jq '.info.title' swagger.json | tr -d '"')
+      #     API_VERSION=$(jq '.info.version' swagger.json | tr -d '"')
+      #     echo "::set-output name=api-name::${API_NAME}"
+      #     echo "::set-output name=api-version::${API_VERSION}"
+      - uses: jiridj/wm-apigw-actions-promote-api@v1
         with: 
           apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
