--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,7 +28,25 @@ jobs:
           api-spec: swagger.json
           set-active: true
           debug: ${{ secrets.ACTIONS_STEP_DEBUG }}
+
       - name: print-api-info
+        run: |
+          echo "ID      = ${{ steps.register-api.outputs.api-id }}"
+          echo "Name    = ${{ steps.register-api.outputs.api-name }}"
+          echo "Version = ${{ steps.register-api.outputs.api-version }}"
+          echo "Type    = ${{ steps.register-api.outputs.api-type }}"
+          echo "Active  = ${{ steps.register-api.outputs.api-is-active }}"
+
+      - uses: jiridj/wm-apigw-actions-register-api@v1
+        with: 
+          apigw-url: ${{ secrets.APIGW_URL }}
+          apigw-username: ${{ secrets.APIGW_USERNAME }}
+          apigw-password: ${{ secrets.APIGW_PASSWORD }}
+          api-spec: testapi.json
+          set-active: true
+          debug: ${{ secrets.ACTIONS_STEP_DEBUG }}
+
+      - name: print-api-info-for-testapi
         run: |
           echo "ID      = ${{ steps.register-api.outputs.api-id }}"
           echo "Name    = ${{ steps.register-api.outputs.api-name }}"
