--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,7 +25,7 @@ jobs:
           apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
           apigw-password: ${{ secrets.APIGW_PASSWORD }}
-          api-spec: swagger.json
+          api-spec: swaggerfile/swagger.json
           set-active: true
           debug: ${{ secrets.ACTIONS_STEP_DEBUG }}
 
@@ -42,7 +42,7 @@ jobs:
           apigw-url: ${{ secrets.APIGW_URL }}
           apigw-username: ${{ secrets.APIGW_USERNAME }}
           apigw-password: ${{ secrets.APIGW_PASSWORD }}
-          api-spec: http://testapi.mylearn.shop/swagger/v1/swagger.json
+          api-spec: swaggerfile/testapi.json
           set-active: true
           debug: ${{ secrets.ACTIONS_STEP_DEBUG }}
 
